@@ -120,11 +120,12 @@
 #define DPS_MAXNETERRORS			16
 #define DPS_DEFAULT_NET_ERROR_DELAY_TIME	86400
 #define DPS_DEFAULT_BAD_SINCE_TIME              15*24*60*60     /**< 15 days */
-#define DPS_FINDURL_CACHE_SIZE                  512
-#define DPS_SERVERID_CACHE_SIZE                 512
+#define DPS_FINDURL_CACHE_SIZE                  1024
+#define DPS_SERVERID_CACHE_SIZE                 256
 #define	DPS_NET_BUF_SIZE		        65536
 #define DPS_MAX_HOST_ADDR                       16
 #define DPS_POPRANKSKIPSAMESITE                 "yes"
+#define DPS_CROSSWORDSSKIPSAMESITE              "yes"
 
 /***********************************/
 
@@ -1128,6 +1129,7 @@ typedef struct dps_indexer_struct{
 
         char    *DpsFindURLCache[DPS_FINDURL_CACHE_SIZE];
         urlid_t DpsFindURLCacheId[DPS_FINDURL_CACHE_SIZE];
+        urlid_t DpsFindURLCacheSiteId[DPS_FINDURL_CACHE_SIZE];
         int     DpsFindURLCacheHops[DPS_FINDURL_CACHE_SIZE];
         size_t  pURLCache;
 
